name:                intersection-size
version:             0.1.0.0
-- synopsis:
-- description:

license:             ISC
license-file:        LICENSE
author:              Simon Jakobi
maintainer:          simon.jakobi@gmail.com
copyright:           © 2020 Simon Jakobi
homepage:            https://github.com/sjakobi/intersection-size
bug-reports:         https://github.com/sjakobi/intersection-size/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/sjakobi/intersection-size

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   Lib
  build-depends:     base >= 4.8 && < 5
                   , containers

benchmark intersection-size-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     QuickCheck
                   , base >= 4.8 && < 5
                   , containers
                   , gauge
                   , intersection-size
